feat: add solution